default.theme/scss/laxar-details-layer-widget.scss
/**
 * Copyright 2015-2017 aixigo AG
 * Released under the MIT license
 * www.laxarjs.org
 */
@charset "UTF-8";

.laxar-details-layer-widget {

   .ax-details-layer {
      position: fixed;
      top: 2vh;
      left: 2vh;
      height: 96vh;
      width: calc( 100vw - 4vh );

      // get in front of bootstrap modal-backdrop
      z-index: 61;
      opacity: 1;
      background-color: white;

      transform-origin: top left;

      &.ax-details-layer-with-source-animation {
         transition: all 500ms ease-in-out;
         transition-property: top, left, height, transform, opacity;
      }
   }

   .ax-details-layer-close-button {
      position: absolute;
      top: 30px;
      right: 30px;
      cursor: pointer;
   }

   .ax-details-layer-content {
      position: relative;
      z-index: 1002;
      overflow-x: hidden;
      overflow-y: auto;
      top: 80px;
      left: 80px;
      height: calc( 100% - 160px );
      width: calc( 100% - 160px );
   }

}

